# starter.kit

./: .coverage  .pre-commit-config.yaml  README.md  main.py  requirements.txt  setup.cfg
config/: LogConfig.py
data/input/: Mars2022.csv  dataTest.csv
data/output/: Avril2022.csv  exportTest.csv
documentation/: starter_python_v0.5.docx
documentation/archives/: starter_python_v0.1.docx  starter_python_v0.2.docx  starter_python_v0.3.docx  starter_python_v0.4.docx
src/: ExportData.py  ImportData.py  Logement.py
tests/: test_ExportData.py  test_ImportData.py  test_Logement.py
