[metadata]
name = Starter Kit Python
version = 1.0
author = Estelle Rosset
description = "Package d'exemple pour bien démarrer vos projet Python"
long_description = file: README.md
#url = https://github.com/liengitduprojet
keywords = example, starterkit, Python

[options]
python_requires = >=3.7, <4
install_requires = 
    pandas

[options.extras_require]
test = 
    pytest
    coverage
